--- a/styles/styles.css
+++ b/styles/styles.css
@@ -21,6 +21,10 @@ a {
     text-align: center;
 }
 
+a:hover {
+    background-color: lightgrey;
+  }
+
 .legend {
     font-weight: 700;
     color: black
@@ -60,7 +64,7 @@ a {
 
 /* ANIMACIÓN HEADER */
 .animate__animated.animate__heartBeat {
-    -o-animation-duration: initial;
+    animation-duration: initial;
 }
 
 /* GRID */
@@ -112,6 +116,11 @@ a {
     border: 0px solid;
     border-radius: 10px;
     padding-left: 10px;
+    transition: all 1s;
+}
+
+.subscribeForm input:focus {
+    background-color: lightskyblue;
 }
 
 .subscribeForm input[type="submit"] {
@@ -171,6 +180,12 @@ a {
 
 }
 
+.carouselExtras {
+    width: 25%;
+    margin: 0 auto;
+    animation-duration: initial;
+}
+
 
 /* FOOTER */
 
@@ -219,6 +234,11 @@ a {
     border: 0px solid;
     border-radius: 10px;
     padding-left: 10px;
+    transition: all 1s;
+}
+
+.footerForm input:focus {
+    background-color: lightskyblue
 }
 
 .footerForm input[type="submit"] {
@@ -228,11 +248,19 @@ a {
     padding: 0;
 }
 
+.footerForm input[type="submit"]:focus {
+    background-color: lightskyblue
+}
+
 .footerForm input[type="reset"] {
     background-color: grey;
     color: white;
     width: 50%;
     padding: 0;
+}
+
+.footerForm input[type="reset"]:focus {
+    background-color: lightskyblue
 }
 
 .footerSocial a {
